fix: align center, then start after content is loaded

--- a/projects.css
+++ b/projects.css
@@ -11,7 +11,7 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: center;
     text-align: center;
 }
 
